# menu

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  .test.env  Makefile  README.md  alembic.ini  docker-compose-test.yaml  docker-compose.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
admin/: Menu.xlsx
migrations/versions/: 1663a8d655ee_init.py  2023_07_25_1539-b5600c8f337c_refactoring_project_stucture.py
src/: app.py  config.py  dependencies.py  main.py
src/api/: app.py  keys_for_cache_invalidation.py
src/api/endpoints/: __init__.py  dish.py  menu.py  submenu.py
src/api/repositories/: abstract_repository.py  dish.py  menu.py  submenu.py
src/api/schemas/: __init__.py  menu.py
src/api/services/: dish.py  menu.py  submenu.py  utils.py
src/cache/: abstract_cache.py  cache.py  core.py  service.py
src/celery/: app.py  celery_config.py  google_cloud_connect.py  parser.py  tasks.py  utils.py
src/db/: core.py  models.py
src/db/crud/: abstract_crud.py  dish.py  menu.py  submenu.py
src/db/migrations/: env.py
src/db/migrations/versions/: 1663a8d655ee_init.py
src/db/schemas/: __init__.py  dish.py  menu.py  submenu.py
src/endpoints/: __init__.py  dish.py  menu.py  submenu.py
src/repositories/: abstract_repository.py  dish.py  menu.py  submenu.py
src/services/: abstract_service.py  dish.py  menu.py  submenu.py
tests/: conftest.py  dish_fixtures.py  dynamic_data_test.py  menu_fixtures.py  submenu_fixtures.py
tests/dish_tests/: dish_api_tests.py
tests/fixtures/: dish_fixtures.py  menu_fixtures.py  submenu_fixtures.py
tests/menu_tests/: menu_api_tests.py
tests/submenu_tests/: submenu_api_tests.py
