[tool.poetry]
name = "menu"
version = "0.1.0"
description = ""
authors = ["mgd <mr.zizikk@gamil.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
SQLAlchemy = "^2.0.19"
uvicorn = "^0.23.1"
python-dotenv = "^1.0.0"
pre-commit = "^3.3.3"
asyncpg = "^0.28.0"
alembic = "^1.11.1"
pytest = "^7.4.0"
httpx = "^0.24.1"
pytest-asyncio = "^0.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
